@@ -1,0 +1,13 @@
+package com.gentics.mesh.http;
+
+/**
+ * Collection of Gentics Mesh specific http headers.
+ */
+public final class MeshHeaders {
+
+	/**
+	 * Header which can be used to influence the anonymous access handling.
+	 */
+	public static final String ANONYMOUS_AUTHENTICATION = "Anonymous-Authentication";
+
+}
