@@ -4,6 +4,10 @@
 
 == 0.9.9 (PENDING)
 
+icon:plus[] Auth: The anonymous authentication mechanism can now also be disabled by setting the `Anonymous-Authentication: disable` header. This is useful for client applications which don't need or want anonymous authentication. The Gentics Mesh REST client has been enhanced accordingly.
+
+icon:check[] UI: You will no longer be automatically logged in as anonymous user once your session expires.
+
 icon:plus[] Core: The read performance of node lists has been improved.
 
 icon:plus[] Core: The write performance of nodes has been improved.
